# ImageClass

./: CMakeLists.txt  Color.cpp  Color.h  ColorGrayscale.cpp  ColorRGBA.cpp  ColorRGBA.h  Image.cpp  Image.h  ImageLoader.cpp  ImageLoader.h  KernelProcessor.cpp  KernelProcessor.h  README.md  main.cpp
Color/: Color.cpp  Color.h  ColorGrayscale.cpp  ColorGrayscale.h  ColorGrayscaleAlpha.cpp  ColorGrayscaleAlpha.h  ColorRGB.cpp  ColorRGB.h  ColorRGBA.cpp  ColorRGBA.h
Google_Tests/: CMakeLists.txt  ColorTest.cpp  ImageLoadTest.cpp  ImageTest.cpp  KernelProcessorTest.cpp  runAllTests.cpp
test_images/: test1.ppm
